# BusTimer

./: .env.template  .gitignore  compose.yml
.github/workflows/: deploy.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py
backend/app/API/: gtfs.py  trips.py  vehicles.py
backend/app/models/: models.py
backend/app/router/: trips.py  vehicles.py
backend/app/schemas/: segments.py  stops.py  trips.py  vehicles.py
backend/app/utils/: db.py  helpers.py
data/: Dockerfile  init.sql  trips.csv
data/gtfs/: calendar.txt  calendar_dates.txt  feed_info.txt  routes.txt  stops.txt  trips.txt
data/responses/: route.json  stop.json  trip.json  vehicle_location.json
db/: Dockerfile
development/: build_calendar.py  build_trips.py  bus_placement.py  bus_route.html  db_connection.py  exploration.py  pyproject.toml  stops.json  vehicle_locations.py  work_trips.json
development/eda/: analytics_eda.html  analytics_eda.py  explore.ipynb  map.html
pgadmin/: servers.json
